# windmill

./: .gitignore  CMakeLists.txt  main.cpp
apriltag/: CMakeLists.txt  README.md
apriltag/include/: ApriltagDetector.hpp
apriltag/src/: ApriltagDetector.cpp
armor/src/: AimAuto.cpp  detector.cpp  number_classifier.cpp  tracker.cpp
model/: wm_0524_4n_416.xml  wm_0524_4n_416_int8.xml
params/include/: globalParam.hpp
serialPort/src/: MessageManager.cpp  SerialPort.cpp
windmill/: CMakeCache.txt  CMakeLists.txt
windmill/config/: WindmillConfig.yaml
windmill/include/: WMIdentify.hpp  WMPredict.hpp  angular_velocity_fitter.hpp  traditional_detection.hpp
windmill/src/: WMIdentify.cpp  WMPredict.cpp  main.cpp  traditional_detection.cpp
